# printf-project

./: CMakeLists.txt  Makefile  README.md
include/: ft_printf.h  ft_printf.h.gch
libft/: Makefile  ft_bzero.c  ft_memchr.c  ft_pow.c  ft_strchr.c  ft_strchri.c  ft_strncmp.c  ft_wcharlen.c  ft_wstrlen.c
sources/: a.out  additional_functions.c  bonus_functions.c  ft_atoi.c  ft_memcpy.c  ft_memset.c  ft_printf.c  ft_printf.h  ft_printf.h.gch  ft_strlen.c  ft_wstrlen.c  handle_numbers.c  handle_strings.c  libft.h  libft.h.gch  parse_arguments.c
